--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "synograph",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "A Graph DB for humans",
   "repository": "https://github.com/oakfang/SynoGraph",
   "main": "index.js",
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "bson": "^0.4.19",
+    "glob": "^6.0.1",
     "graphlib": "^1.0.7",
     "lodash": "^3.10.1",
-    "node-uuid": "^1.4.3"
+    "node-uuid": "^1.4.3",
+    "webworker-threads": "^0.6.2"
   }
 }
