--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "synograph",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "A Graph DB for humans",
-  "repository": "https://github.com/oakfang/SynoGraph",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oakfang/SynoGraph"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
